--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,1 @@
-<div><app-cell></app-cell><app-cell></app-cell><app-cell></app-cell></div>
+<div><app-cell></app-cell><app-cell></app-cell><app-cell></app-cell><app-cell></app-cell><app-cell></app-cell><app-cell></app-cell><app-cell></app-cell><app-cell></app-cell><app-cell></app-cell></div>
