--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<div><app-board></app-board></div>
-<app-button></app-button>
+<div class ="circleBlue"></div>
+<div><app-gamefield></app-gamefield></div>
+<div class = "circleYellow"></div>
+
