--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,9 +1,33 @@
 div{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(10, 1fr);
     margin-top: 72px;
     margin-left: 530px;
     border-radius: 20px;
     height: 780px;
     width: 780px;
-    background-image: linear-gradient(to bottom, #5971B0, #7F2DE8);
+    background: linear-gradient(180deg, #AAC2FF 0%, #C81BF1 100%);
+    backdrop-filter: blur(101px);
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+button{
+    display: flex;
+    padding: 0;
+    margin-left: 12px;
+    margin-top: 12px;
+    margin-right: 0;
+    border: 2px solid;
+    background: linear-gradient(180deg, #FFFFFF -31.99%, rgba(255, 255, 255, 0) 113.98%);
+    border-image-source: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%);
+    backdrop-filter: blur(14px);
+    box-shadow: -21px 15px 50px 0px #1D264640;
+    border-radius: 16px;
+    height: 64px;
+    width: 64px;
+}
+
+ .active-button {
+    background-color: red;
 }
