--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-body{
-    background-image: url("D:/AngularTask/Game/src/app/picture/background.jpg");
-    background-size: cover;
+body {
+  background-image: url("./app/picture/background.jpg");
+  background-size: cover;
 }
