add first part of button restart

--- a/src/app/gamefield/gamefield.component.html
+++ b/src/app/gamefield/gamefield.component.html
@@ -1,4 +1,5 @@
 <div>
-    <!-- <button (onclick)="Restart()">Restart</button> -->
+    <button (click)="OnRestartClick()">Restart</button>
+    <button (click) = "OnStepBackClick()">Step back</button>
     <app-board></app-board>
 </div>
