Add pop-up-restart and pop-up-winner

--- a/src/app/gamefield/gamefield.component.html
+++ b/src/app/gamefield/gamefield.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button (click)="OnRestartClick()">Restart</button>
+  <button mat-raised-button (click) = "openDialogRestart('0ms', '0ms')">Restart</button>
   <button (click)="OnStepBackClick()">Step back</button>
   <app-board></app-board>
 </div>
