--- a/src/app/pop-up-lose/pop-up-lose.component.html
+++ b/src/app/pop-up-lose/pop-up-lose.component.html
@@ -1,1 +1,12 @@
-<p>pop-up-lose works!</p>
+<h2 mat-dialog-title>SORRY!</h2>
+<mat-dialog-content> You lose! </mat-dialog-content>
+<mat-dialog-actions>
+  <button
+    (click)="OnRestartClick()"
+    mat-button
+    mat-dialog-close
+    cdkFocusInitial
+  >
+    TRY AGAIN
+  </button>
+</mat-dialog-actions>
