--- a/src/app/pop-up-restart/pop-up-restart.component.html
+++ b/src/app/pop-up-restart/pop-up-restart.component.html
@@ -1,8 +1,13 @@
-<h2 mat-dialog-title>Restart</h2>
-<mat-dialog-content>
-  Are you sure?
-</mat-dialog-content>
+<h2 mat-dialog-title>RESTART</h2>
+<mat-dialog-content> Are you sure? </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close>No</button>
-  <button (click) = "OnRestartClick()" mat-button mat-dialog-close cdkFocusInitial>Yes</button>
+  <button mat-button mat-dialog-close>NO</button>
+  <button
+    (click)="OnRestartClick()"
+    mat-button
+    mat-dialog-close
+    cdkFocusInitial
+  >
+    YES
+  </button>
 </mat-dialog-actions>
