--- a/src/app/gamefield/gamefield.component.html
+++ b/src/app/gamefield/gamefield.component.html
@@ -1,11 +1,11 @@
 <div>
-  <button class="stepBack" (click)="OnStepBackClick()">Step back</button>
+  <span>10x10</span>
+  <button class="stepBack" (click)="OnStepBackClick()">STEP BACK</button>
   <button
     class="restart"
-    mat-raised-button
     (click)="openDialogRestart('0ms', '0ms')"
   >
-    Restart
+    RESTART
   </button>
-  <!-- <app-board></app-board> -->
+  <app-board></app-board>
 </div>
