--- a/src/app/cell/cell.component.scss
+++ b/src/app/cell/cell.component.scss
@@ -1,9 +1,5 @@
 button {
   display: flex;
-  padding: 0;
-  margin-left: 12px;
-  margin-top: 12px;
-  margin-right: 0;
   border: 2px solid;
   background: linear-gradient(
     180deg,
@@ -15,22 +11,60 @@ button {
     #ffffff 0%,
     rgba(255, 255, 255, 0) 100%
   );
-  backdrop-filter: blur(14px);
-  box-shadow: -21px 15px 50px 0px #1d264640;
   border-radius: 16px;
   height: 64px;
   width: 64px;
+  padding: 0;
 }
 
-:host(.selected) > button {
-  background-color: red;
+:host(.selected)  button > div {
+  display: flex;
+  text-align: center;
+  margin: auto;
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  background: linear-gradient(180deg, #FFB800 0%, #FF1F00 100%);
 }
 
-:host(.possible) > button {
-  border-color: black;
-  border: 3px solid;
+:host(.possible)  button > div{
+  display: flex;
+  text-align: center;
+  margin: auto;
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  background: linear-gradient(180deg, #FFB800 0%, #FF1F00 100%);
 }
 
-:host(.disabled) > button {
+:host(.disabled .selected) > button > div {
   pointer-events: none;
+  display: flex;
+  text-align: center;
+  margin: auto;
+  height: 38px;
+  width: 38px;
+  border-radius: 50%;
+  background: linear-gradient(220.53deg, #B2F763 0%, #26AB3F 76.95%);
+}
+
+:host(.disabled) > button  {
+  pointer-events: none;
+  // display: flex;
+  // text-align: center;
+  // margin: auto;
+  // height: 38px;
+  // width: 38px;
+  // border-radius: 50%;
+  // background: linear-gradient(220.53deg, #B2F763 0%, #26AB3F 76.95%);
+}
+:host(.disabled .selected) button > div  {
+  
+  display: flex;
+  text-align: center;
+  margin: auto;
+  height: 38px;
+  width: 38px;
+  border-radius: 50%;
+  background: linear-gradient(220.53deg, #B2F763 0%, #26AB3F 76.95%);
 }
