--- a/src/app/cell/cell.component.scss
+++ b/src/app/cell/cell.component.scss
@@ -1,6 +1,5 @@
 button {
   display: flex;
-  border: 2px solid;
   background: linear-gradient(
     180deg,
     #ffffff -31.99%,
@@ -17,54 +16,36 @@ button {
   padding: 0;
 }
 
-:host(.selected)  button > div {
+:host(.selected) button > div {
   display: flex;
   text-align: center;
   margin: auto;
-  height: 48px;
-  width: 48px;
+  height: 38px;
+  width: 38px;
   border-radius: 50%;
-  background: linear-gradient(180deg, #FFB800 0%, #FF1F00 100%);
+  background: linear-gradient(220.53deg, #b2f763 0%, #26ab3f 76.95%);
 }
 
-:host(.possible)  button > div{
+:host(.possible) button > div {
   display: flex;
   text-align: center;
   margin: auto;
   height: 24px;
   width: 24px;
   border-radius: 50%;
-  background: linear-gradient(180deg, #FFB800 0%, #FF1F00 100%);
+  background: linear-gradient(180deg, #ffb800 0%, #ff1f00 100%);
 }
 
-:host(.disabled .selected) > button > div {
+:host(.disabled) > button {
   pointer-events: none;
+}
+
+:host(.last) button > div {
   display: flex;
   text-align: center;
   margin: auto;
-  height: 38px;
-  width: 38px;
+  height: 48px;
+  width: 48px;
   border-radius: 50%;
-  background: linear-gradient(220.53deg, #B2F763 0%, #26AB3F 76.95%);
-}
-
-:host(.disabled) > button  {
-  pointer-events: none;
-  // display: flex;
-  // text-align: center;
-  // margin: auto;
-  // height: 38px;
-  // width: 38px;
-  // border-radius: 50%;
-  // background: linear-gradient(220.53deg, #B2F763 0%, #26AB3F 76.95%);
-}
-:host(.disabled .selected) button > div  {
-  
-  display: flex;
-  text-align: center;
-  margin: auto;
-  height: 38px;
-  width: 38px;
-  border-radius: 50%;
-  background: linear-gradient(220.53deg, #B2F763 0%, #26AB3F 76.95%);
+  background: linear-gradient(180deg, #ffb800 0%, #ff1f00 100%);
 }
