--- a/src/app/gamefield/gamefield.component.html
+++ b/src/app/gamefield/gamefield.component.html
@@ -1,11 +1,7 @@
 <div>
   <span>10x10</span>
   <button class="stepBack" (click)="OnStepBackClick()">STEP BACK</button>
-  <button
-    class="restart"
-    (click)="openDialogRestart('0ms', '0ms')"
-  >
-    RESTART
-  </button>
+  <!-- <button class="restart">RESTART</button> -->
+  <app-pop-up-restart></app-pop-up-restart>
   <app-board></app-board>
 </div>
