--- a/src/app/pop-up-restart/pop-up-restart.component.html
+++ b/src/app/pop-up-restart/pop-up-restart.component.html
@@ -1,11 +1,14 @@
-<h2 >RESTART</h2>
-<mat-dialog-content> Are you sure? </mat-dialog-content>
-<mat-dialog-actions>
-  <button class = "no"  mat-dialog-close>NO</button>
-  <button class = "yes"
-    (click)="OnRestartClick()"
-    mat-dialog-close
-  >
-    YES
-  </button>
-</mat-dialog-actions>
+<dialog #dialog>
+  <header>
+    <span>RESTART</span>
+    <img src="../../assets/close.svg" />
+  </header>
+  <div>
+    <span>Are you sure?</span>
+    <button (click)="OnRestartClick()" (click)="dialog.close()">YES</button>
+    <button (click)="OnRestartClick()" (click)="dialog.close()">NO</button>
+  </div>
+  <footer></footer>
+</dialog>
+
+<button class="restart" (click)="dialog.showModal()">RESTART</button>
