--- a/src/app/pop-up-restart/pop-up-restart.component.scss
+++ b/src/app/pop-up-restart/pop-up-restart.component.scss
@@ -1,35 +1,47 @@
-h2{
-    color:#FFBFF5;
-    text-align: center;
-    font-size: 48px;
-    line-height: 72px;
-    font-weight: 800;
-    font-family: Poppins;
-    border: 1px solid #D143B280
-}
-
-// button.no{
-//     display: flex;
-//     position: absolute;
-//     height: 92px;
-//     width: 360px;
-//     margin-left: 466px;
-//     margin-top: 441px;
-//     background: #DD4747;
-// background-blend-mode: overlay;
-// background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%);
-
-// }
-
-mat-dialog-content{
-  color:#FCE7FF !important;
-  font-size: 38px !important;
-  line-height: 56px !important;
-  font-weight: 400 !important;
-  text-align: center !important;
-  font-family: Poppins !important;
-}
-.mat-mdc-dialog-surface ::ng-deep{
+dialog {
   width: 868px;
   height: 601px;
+  border-radius: 33px;
+  background: #4f2b87;
+  padding: 0;
+}
+
+.restart {
+  width: 192px;
+  height: 48px;
+  border-radius: 12px;
+
+  background: #f96e03;
+  opacity: 80%;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 24px;
+  text-align: center;
+  color: #ffeed8;
+  font-family: Poppins;
+}
+
+header {
+  background: linear-gradient(
+    180deg,
+    rgba(79, 43, 135, 1) 29%,
+    rgba(123, 64, 172, 1) 66%
+  );
+
+  width: 868px;
+  height: 121px;
+}
+
+header > span {
+  position: relative;
+  margin: auto;
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 72px;
+  margin-top: 21px;
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-image: linear-gradient(0deg, #ffbff5, #ffbff5),
+    linear-gradient(180deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
 }
