--- a/src/app/pop-up-winner/pop-up-winner.component.html
+++ b/src/app/pop-up-winner/pop-up-winner.component.html
@@ -1,8 +1,1 @@
-<h2 mat-dialog-title>CONGRATS!</h2>
-<mat-dialog-content>
-  You are winner
-</mat-dialog-content>
-<mat-dialog-actions>
-  <button (click) = 'OnRestartClick()' mat-button mat-dialog-close>Restart</button>
-  
-</mat-dialog-actions>
+<p>pop-up-winner works!</p>
