--- a/src/app/gamefield/gamefield.component.html
+++ b/src/app/gamefield/gamefield.component.html
@@ -1,7 +1,8 @@
 <div>
   <span>10x10</span>
   <button class="stepBack" (click)="OnStepBackClick()">STEP BACK</button>
-  <!-- <button class="restart">RESTART</button> -->
   <app-pop-up-restart></app-pop-up-restart>
   <app-board></app-board>
 </div>
+<app-pop-up-lose></app-pop-up-lose>
+<app-pop-up-winner></app-pop-up-winner>
