--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 body {
-  background-image: url("./app/picture/background-crop.jpg");
+  background-image: url("./assets/background-crop.jpg");
   background-size: cover;
   overflow: hidden;
 }
