--- a/src/app/pop-up-lose/pop-up-lose.component.html
+++ b/src/app/pop-up-lose/pop-up-lose.component.html
@@ -1,1 +1,14 @@
-<p>pop-up-lose works!</p>
+<dialog #dialog>
+    <header>
+      <span>SORRY!</span>
+      <img class = "cross" (click)="dialog.close()" src="../../assets/close.svg" />
+    </header>
+    <div>
+        <img class = "sad" src = "../../assets/sad.svg">
+      <span>You lose!</span>
+      <button class = "yes" (click)="OnRestartClick()" (click)="dialog.close()"><span>TRY AGAIN</span></button>
+    </div>
+    <footer></footer>
+  </dialog>
+  
+  <button class="restart" (click)="dialog.showModal()">RESTART</button>
