--- a/src/app/pop-up-winner/pop-up-winner.component.html
+++ b/src/app/pop-up-winner/pop-up-winner.component.html
@@ -10,5 +10,4 @@
     </div>
     <footer></footer>
   </dialog>
-  
-  <button class="restart" (click)="dialog.showModal()">RESTART</button>
+  <button class="restart" (click)="dialog.showModal()"><span>RESTART</span></button>
