--- a/src/app/cell/cell.component.scss
+++ b/src/app/cell/cell.component.scss
@@ -5,11 +5,7 @@ button {
     #ffffff -31.99%,
     rgba(255, 255, 255, 0) 113.98%
   );
-  border-image-source: linear-gradient(
-    180deg,
-    #ffffff 0%,
-    rgba(255, 255, 255, 0) 100%
-  );
+  border: none;
   border-radius: 16px;
   height: 64px;
   width: 64px;
@@ -18,7 +14,6 @@ button {
 
 :host(.selected) button > div {
   display: flex;
-  text-align: center;
   margin: auto;
   height: 38px;
   width: 38px;
@@ -28,7 +23,6 @@ button {
 
 :host(.possible) button > div {
   display: flex;
-  text-align: center;
   margin: auto;
   height: 24px;
   width: 24px;
