--- a/src/app/gamefield/gamefield.component.scss
+++ b/src/app/gamefield/gamefield.component.scss
@@ -6,7 +6,6 @@ div {
   width: 860px;
   height: 946px;
   border-radius: 25px;
-  border: 2px solid;
   border-image-source: radial-gradient(
       0% 50% at 50% 50%,
       #0f0f0f 0%,
@@ -38,14 +37,13 @@ app-pop-up-restart {
 
 .stepBack {
   position: absolute;
+  border: none;
   width: 192px;
   height: 48px;
   border-radius: 12px;
   margin-top: 42px;
   margin-left: 412px;
-  border: 2px solid;
-  background: #265dc7;
-  opacity: 80%;
+  background: linear-gradient(0deg, rgba(135,173,246,1) 0%, rgba(38,93,199,1) 50%, rgba(135,173,246,1) 100%);
   font-size: 16px;
   font-weight: 800;
   line-height: 24px;
@@ -59,12 +57,13 @@ app-board {
   margin-top: 126px;
 }
 span {
-  //font-family: poppins;
-  color: #296399;
   line-height: 72px;
   font-weight: 700;
   font-size: 48px;
   margin-top: 30px;
   margin-left: 40px;
   text-align: center;
+  color: transparent;
+  background-clip: text;
+  background-image: linear-gradient(180deg, #296399 54.68%, rgba(255, 255, 255, 0) 187.46%);
 }
