--- a/src/app/pop-up-lose/pop-up-lose.component.scss
+++ b/src/app/pop-up-lose/pop-up-lose.component.scss
@@ -7,21 +7,8 @@ dialog {
     border: none;
   }
   
-  .restart {
-    width: 192px;
-    height: 48px;
-    border-radius: 12px;
-    background: red;
-    opacity: 80%;
-    font-size: 16px;
-    font-weight: 800;
-    line-height: 24px;
-    text-align: center;
-    color: #ffeed8;
-    font-family: Poppins;
-  }
-  
   header {
+    display: flex;
     background: linear-gradient(
       180deg,
       rgba(79, 43, 135, 1) 29%,
@@ -33,15 +20,11 @@ dialog {
   }
   
   header > span {
-    position: absolute;
-    margin-left: 342px;
-    margin-top: 21px;
     font-size: 48px;
     font-weight: 800;
     line-height: 72px;
-    margin-top: 21px;
+    margin: auto;
     color: transparent;
-    -webkit-background-clip: text;
     background-clip: text;
     background-image: linear-gradient(0deg, #ffbff5, #ffbff5),
       linear-gradient(180deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
@@ -98,14 +81,11 @@ dialog {
   }
   
   .yes > span{
-    position:absolute;
-    margin-top: 17px;
-    margin-left: 75px;
+    margin:auto;
     font-size: 38px;
     font-weight: 800;
     line-height: 56px;
     color: transparent;
-    -webkit-background-clip: text;
     background-clip: text;
     background-image: linear-gradient(0deg, #B6F6FF, #B6F6FF),
     linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%);
