--- a/src/app/pop-up-restart/pop-up-restart.component.html
+++ b/src/app/pop-up-restart/pop-up-restart.component.html
@@ -11,4 +11,4 @@
   <footer></footer>
 </dialog>
 
-<button class="restart" (click)="dialog.showModal()">RESTART</button>
+<button class="restart" (click)="dialog.showModal()"><span>RESTART</span></button>
