--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,7 +1,53 @@
-<div>
+<div class="board">
   @for (buttonX of buttonsX; track $index; let idx = $index) {
     @for (buttonY of buttonsY; track $index; let idy = $index) {
-      <app-cell [positionX]="idx" [positionY]="idy"></app-cell>
+      <app-cell
+        [positionX]="idx"
+        [positionY]="idy"
+        (selectCell)="selectCell(idx, idy)"
+      ></app-cell>
     }
   }
 </div>
+
+<dialog #loseDialog>
+  <div>
+    <header>
+      <span>SORRY!</span>
+      <img
+        class="cross"
+        (click)="loseDialog.close()"
+        src="../../assets/close.svg"
+      />
+    </header>
+    <div>
+      <img class="sad" src="../../assets/sad.svg" />
+      <p class="message">You lose!</p>
+      <button class="confirm" (click)="loseDialog.close(); OnRestartClick()">
+        <span>TRY AGAIN</span>
+      </button>
+    </div>
+    <footer></footer>
+  </div>
+</dialog>
+
+<dialog #WinnerDialog>
+  <div>
+    <header>
+      <span>CONGRATS!</span>
+      <img
+        class="cross"
+        (click)="WinnerDialog.close()"
+        src="../../assets/close.svg"
+      />
+    </header>
+    <div>
+      <img class="happy" src="../../assets/happy.svg" />
+      <p class="message">You are WINNER!</p>
+      <button class="confirm" (click)="WinnerDialog.close(); OnRestartClick()">
+        <span>RESTART</span>
+      </button>
+    </div>
+    <footer></footer>
+  </div>
+</dialog>
