--- a/src/app/gamefield/gamefield.component.scss
+++ b/src/app/gamefield/gamefield.component.scss
@@ -160,6 +160,12 @@ img {
   width: 48px;
   display: block;
   margin-right: 20px;
+  &:hover{
+    cursor: pointer;
+    stroke-width: "10" ;
+    stroke: black;
+    opacity: 0.8;
+  }
 }
 .question {
   font-size: 38px;
