--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -1,1 +1,5 @@
-<button (click)="OnButtonClick()"><div></div></button>
+<button (click)="OnButtonClick()">
+  <div>
+    <p class="number">{{ numberPosition }}</p>
+  </div>
+</button>
