--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="circleBlue"></div>
 <div class="circleYellow"></div>
-<div><app-gamefield></app-gamefield></div>
+<div>
+  <app-gamefield></app-gamefield>
+</div>
