--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -1,1 +1,1 @@
-<button (click)="onButtonClick()"><div> <p class="number">{{ numberPosition }}</p></div></button>
+<button (click)="onButtonClick()"><div> <p class="number">{{ numberPosition() }}</p></div></button>
