--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -8,7 +8,7 @@
         [class.last]="checkLastCell(idx, idy)"
         (click)="selectCell(idx,idy)">
         <div>
-          <p class="number">{{ numberPosition + 1}}</p>
+          <p class="number" >{{numberPosition(idx,idy) + 1}}</p>
         </div>
       </button>
     }
